@@ -1,3 +1,9 @@
+2010-06-20   Patrice Dumas  <pertusus@free.fr>
+
+	* texi2html.pl: set the command name to texi2any when it is not
+	a known command name (ie $0 or --program is not texi2html, 
+	makeinfo or texi2any). Report from Karl.
+
 2010-06-12   Patrice Dumas  <pertusus@free.fr>
 
 	* texi2html.init, texi2html.pl, formats/html.init: new output
